--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,15 @@
 body{
+    width: 100%;
     font-size: 1rem;
     font-family: Arial, Helvetica, sans-serif;
 
+}
+@media(min-width:900px){
+    body{
+        font-size: 1.2rem;
+        font-family: Arial, Helvetica, sans-serif;
+    
+    }
 }
 nav{
     border-bottom: 1px solid;
@@ -11,17 +19,19 @@ nav{
 nav ul li{
     font-weight: bold;
     display: inline-block;
-    padding: 0 0 0 2px;
-}
-@media(min-width:1100px){
-    nav ul li{
-        font-size: 1.5rem;
-        padding: 0 10px;
-    }
+    padding: 0 0 0 10px;
+
 }
 nav ul li a{
     text-decoration: none;
 }
+@media(min-width:900px){
+    nav ul li a{
+        font-size: 1.5rem;
+        padding: 0 10px;
+    }
+}
+
 nav ul li a:link{
     color: darkcyan;
 }
@@ -40,11 +50,13 @@ footer{
     margin-top: 5px;
 
 }
+
 /* css for home page */
 header{
     background-color: rgb(148, 218, 218);
-    padding: 5px 10px;
+    padding: 5px 0px;
     border: 2px dashed white;
+    width: 100%;
     
 }
 header img{
@@ -61,69 +73,74 @@ header p{
     margin: 3% auto;
     font-style: italic;
 }
-section article h3{
+#home section article h3{
     text-transform: uppercase;
     font-weight: bold;
 }
-@media(min-width:1100px){
-    section{
+@media(min-width:900px){
+    #home section{
         display: flex;
         align-items: flex-end;
     }
-    section article div{
+    #home section article div{
         display: flex;
         justify-content: space-between;
            
     }
 }
-section article{
+#home section article{
     padding: 20px 10px 20px 10px;
     box-sizing: border-box;
     flex-basis: 30%;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-section article:nth-child(1){
+#home section article:nth-child(1){
     background-color: #c0dbe2;
     flex: 1.5;
 }
-section article:nth-child(2){
+#home section article:nth-child(2){
     background-color: #cdf1c3;
     flex: 1.5;
 }
-section article:nth-child(3){
+#home section article:nth-child(3){
     background-color: #ccb9da;
     flex: 1;
 }
-section article:nth-child(1) ul li{
+#home section article:nth-child(1) ul li{
     text-transform: capitalize;
 }
 
-section article div div{
+#home section article div div{
     padding: 5px;
     flex: 1;
     box-sizing: border-box;
     flex-basis: 40%;
 }
-section article div div:nth-child(1){
+#home section article div div:nth-child(1){
     text-transform: capitalize;
     flex: 1;
 }
-section article div div:nth-child(2){
+#home section article div div:nth-child(2){
     text-transform: uppercase;
     flex: 2;
 }
+
 /* gallery page css */
-div h3{
-    width: 27%;
-    font-size: 2rem;
+#gallery{
+    background-color: #c0dbe2;
+}
+#gallery h1{
+    text-align: center;
+    text-transform: uppercase;
+}
+#gallery div h3{
     text-transform: uppercase;
     text-align: center;
-    margin: auto;
     padding: 10px 0px 2px 0px;
     border-bottom: 2px solid;
 }
-div section  img{
-    width: 29%;
+#gallery div section  img{
+    width: 95%;
     height: 350px;
     border-top: 6px solid green;
     border-bottom: 6px solid red;
@@ -133,10 +150,137 @@ div section  img{
     
     
 }
-div section img:nth-child(1){
-    float: left;
+@media(min-width:900px){
+    #gallery div h3{
+        width: 27%;
+        font-size: 2rem;
+        text-transform: uppercase;
+        text-align: center;
+        margin: auto;
+        padding: 10px 0px 2px 0px;
+        border-bottom: 2px solid;
+    }
+    #gallery div section  img{
+        width: 28.5%;
+        height: 350px;
+        border-top: 6px solid green;
+        border-bottom: 6px solid red;
+        border-right: 6px solid purple; 
+        border-left: 6px solid rgb(35, 105, 209);
+        margin: 1.66%;   
+    }
+    #gallery div section img:nth-child(1){
+        float: left;
+       
+    }
+    #gallery div section img:nth-child(2){
+        float: left;
+    }
+}
+/* contact page css */
+#contact{
+    background-color: #c0dbe2 ;
+}
+
+@media(max-width:900px){
+    #contact section form div{
+        display: flex;
+        flex-direction: column;
+    }
+}
+input[type="submit"]{
+    width: 20%;
+    position: relative;
+    left: 30%;
+}
+
+@media(min-width:900px){
+    #contact section{
+        display: flex;
+        align-items: flex-end;
+        justify-content: stretch;
+    }
+    #contact section form{
+        flex: 1;
+        padding: 10px 20px;
+    }
+    
+    input[type="text"]{
+        margin-left: 40px;
+    }
+    input[type="tel"]{
+        margin-left: 4px;
+    }
+    input[type="email"]{
+        margin-left: 78px;
+    }
+    select{
+        margin-left: 65px;
+    }
+    #contact section form div:nth-of-type(6){
+        position: relative;
+        left: 130px;
+    }
+    
+    input[type="submit"]{
+        position: relative;
+        left: 300px;
+    }
+}
+
+
+#contact section form h3{
+    text-transform: capitalize;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+#contact section div{
+    flex: 1;
+    width: 90%;
+}
+#contact section form div{
+    margin: 15px 0px;
+}
+label{
+    text-transform: capitalize;
+}
+ 
+
+
+/* blog page css */
+#blog{
+    background-color:#c0dbe2 ;
+    font-size: 1rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+#blog h1{
+    text-align: center;
+    text-transform: uppercase;
+}
+#blog div{
+    width: 60%;
+    margin: 20px auto;
+    border: 1px solid;
+    padding: 10px;
+    
    
 }
-div section img:nth-child(2){
-    float: left;
+.title{
+    text-transform: capitalize;
+    width: 54%;
+}
+#blog div section{
+    margin-bottom: 50px;
+}
+#blog div section article{
+    text-align: justify;
+    padding: 0px 5px;
+}
+.date{
+    font-style: italic;
+    font-weight: bold;
+}
+#question6 article ul li em{
+    text-transform: capitalize;
 }
