--- a/css/style.css
+++ b/css/style.css
@@ -142,12 +142,16 @@ header p{
 #gallery div section  img{
     width: 95%;
     height: 350px;
-    border-top: 6px solid green;
-    border-bottom: 6px solid red;
-    border-right: 6px solid purple; 
-    border-left: 6px solid rgb(35, 105, 209);
+    border: 6px solid white;
     margin: 1.66%;
     
+    animation: mymove 15s infinite;
+}
+@keyframes mymove{
+    50%{border-bottom-color: red;}
+    50%{border-top-color: green;}
+    50%{border-right-color: yellow;}
+    50%{border-left-color: blue;}
     
 }
 @media(min-width:900px){
@@ -163,11 +167,15 @@ header p{
     #gallery div section  img{
         width: 28.5%;
         height: 350px;
-        border-top: 6px solid green;
-        border-bottom: 6px solid red;
-        border-right: 6px solid purple; 
-        border-left: 6px solid rgb(35, 105, 209);
+        border: 6px solid white;
         margin: 1.66%;   
+        animation: mymove 15s infinite;
+    }
+    @keyframes mymove{
+        50%{border-bottom-color: red;}
+        50%{border-top-color: green;}
+        50%{border-right-color: yellow;}
+        50%{border-left-color: blue;}
     }
     #gallery div section img:nth-child(1){
         float: left;
@@ -272,10 +280,13 @@ label{
 }
 #blog div section{
     margin-bottom: 50px;
+    
 }
 #blog div section article{
     text-align: justify;
     padding: 0px 5px;
+    max-height: 300px;
+    overflow-y: scroll;
 }
 .date{
     font-style: italic;
